showing download buttons for datatable results

--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -169,7 +169,8 @@
                     </details>
 
                         <p id="subParam1">Matched list of the adverse reaction reports</p>
-                        <!--<div class="pull-right" id="btnDownload">
+                        
+                    <div class="pull-right" id="btnDownload">
             <ul class="list-unstyled">
                 <li class="btn-group btn-group-xs">
                     <input type="button" name="btnExcel" value="Download csv" id="btnExcel" class="btn btn-default btn-xs mrgn-rght-md" />
@@ -177,7 +178,7 @@
                     <input type="button" name="btnXml" value="Download xml" id="btnXml" class="btn btn-default btn-xs" />
                   </li>
             </ul>
-        </div>-->
+        </div>
                         <table id="cvpTable" class="wb-tables table table-striped table-hover table-bordered">
                             <thead>
                                 <tr class="active">
