modified title in index page

--- a/cvpWebApi/index-en.html
+++ b/cvpWebApi/index-en.html
@@ -90,7 +90,7 @@
     <div class="container">
         <main role="main" property="mainContentOfPage" class="container">
             <div class="wb-frmvld">
-                <h1>Canada Vigilance Adverse Reaction Database</h1>
+                <h1>Canada Vigilance Adverse Reaction Database - API</h1>
                 <p>The Canada Vigilance Adverse Reaction Online Database contains information about suspected adverse reactions (also known as side effects) to health products.</p>
                 <a href="./SearchReport">Search Adverse Reaction Online Database</a> -
                 <a href="./Reference">Canada Vigilance Adverse Reaction Database API Guide</a>
@@ -241,19 +241,6 @@
                             <td><a class="btn btn-default" href="./CSV/DownloadCSV?dataType=report&lang=fr">CSV (Download)</a></td>
                         </tr>
 
-                        <!--<tr>
-                            <td>All Report by Drug Name - English:<input type="text" id="strDrugName" size="15" /></td>
-                            <td><a class="btn btn-default" href='' onclick="this.href='./api/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=json'">Json</a></td>
-                            <td><a class="btn btn-default" href='' onclick="this.href = './api/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=en&type=xml'">XML</a></td>
-                            <td><a class="btn btn-default" href="https://api.hres.ca/cvp/api/CSV/DownloadCSV?dataType=drugName&lang=en">CSV (Download)</a></td>
-                        </tr>
-                        <tr>
-                            <td>All Report by Drug Name - French:<input type="text" id="strDrugName" size="15" /></td>
-                            <td><a class="btn btn-default" href='' onclick="this.href='./api/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=json'">Json</a></td>
-                            <td><a class="btn btn-default" href='' onclick="this.href = './api/report/?drug_name=' + '%' + document.getElementById('strDrugName').value + '%' + '&lang=fr&type=xml'">XML</a></td>
-                            <td><a class="btn btn-default" href="https://api.hres.ca/cvp/api/CSV/DownloadCSV?dataType=drugName&lang=fr">CSV (Download)</a></td>
-                        </tr>-->
-
                         <tr>
                             <td>Seriousness - English:</td>
                             <td><a class="btn btn-default" href="./seriousness/?lang=en&type=json">Json</a></td>
@@ -266,7 +253,6 @@
                             <td><a class="btn btn-default" href="./seriousness/?lang=fr&type=xml">XML</a></td>
                             <td><a class="btn btn-default" href="./CSV/DownloadCSV?dataType=seriousness&lang=fr">CSV (Download)</a></td>
                         </tr>
-
 
 
                         <tr>
@@ -284,7 +270,7 @@
 
 
 
-                        <tr>
+                        <!--<tr>
                             <td>All Report Info - English:</td>
                             <td><a class="btn btn-default" href="./reportinfo/?lang=en&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./reportinfo/?lang=en&type=xml">XML</a></td>
@@ -295,7 +281,7 @@
                             <td><a class="btn btn-default" href="./reportinfo/?lang=fr&type=json">Json</a></td>
                             <td><a class="btn btn-default" href="./reportinfo/?lang=fr&type=xml">XML</a></td>
                             <td><a class="btn btn-default" href="./CSV/DownloadCSV?dataType=info&lang=fr">CSV (Download)</a></td>
-                        </tr>
+                        </tr>-->
 
                     </tbody>
                 </table>
